--- a/mx-ease-Dark/gtk-3.0/extra-tweaks.css
+++ b/mx-ease-Dark/gtk-3.0/extra-tweaks.css
@@ -51,9 +51,20 @@ toolbar toolbutton button:hover { color: #424242; background-color: #A3B5D9; bor
 
 .thunar menuitem:hover { color: #1d2324; background-color: #A3B5D9; }
 
+/* here */
+.thunar toolbar toolitem button box {
+    color: #ffffff;
+    background-color: transparent;
+}
+
+.thunar toolbar toolitem button box:active {
+    color: #ffffff;
+    background-color: #2e63ba;
+}
+
+
 .thunar toolbar toolbutton button {
-    color: #f5f5f5;
-    border: solid 2px transparent;
+    border: solid 1px transparent;
 }
 
 .thunar toolbar toolbutton button:hover {
@@ -67,6 +78,13 @@ toolbar toolbutton button:hover { color: #424242; background-color: #A3B5D9; bor
     background-color: #2e63ba;
     border: solid 1px #2e63ba;
 }
+
+.thunar toolbar toolbutton button:checked {
+    color: #ffffff;
+    background-color: #2e63ba;
+    border: solid 1px #2e63ba;
+}
+/* to here */
 
 .thunar radio:not(list):checked {-gtk-icon-source: -gtk-scaled(url("assets/radio-checked.png")) }
 .thunar radio:not(list) {-gtk-icon-source: -gtk-scaled(url("assets/radio-unchecked.png")) }
