--- a/mx-ease/gtk-3.0/gtk-dark.css
+++ b/mx-ease/gtk-3.0/gtk-dark.css
@@ -3909,19 +3909,19 @@ list row {
   padding: 3px 6px;
 }
 
-.budgie-popover.budgie-menu row.activatable > button.flat, treeview.view header button, row.activatable {
+/* .budgie-popover.budgie-menu row.activatable > button.flat, treeview.view header button, row.activatable {
   outline: none;
   background-image: image(rgba(50, 129, 234, 0));
   background-position: 3px center;
   background-repeat: no-repeat;
   background-size: 3px 16px;
   box-shadow: inset 0 0 0 9999px transparent;
-}
+} */
 
-.budgie-popover.budgie-menu row.activatable > button.flat:hover, treeview.view header button:hover, row.activatable:hover {
+/* .budgie-popover.budgie-menu row.activatable > button.flat:hover, treeview.view header button:hover, row.activatable:hover {
   transition: box-shadow 75ms cubic-bezier(0, 0, 0.2, 1), background-image 0;
   box-shadow: inset 0 0 0 9999px alpha(currentColor, 0.08);
-}
+} */
 
 .budgie-popover.budgie-menu row.activatable > button.has-open-popup.flat, treeview.view header button.has-open-popup, .budgie-popover.budgie-menu row.activatable > button.flat:active, treeview.view header button:active, row.activatable.has-open-popup, row.activatable:active {
   transition: background-image 1200ms cubic-bezier(0, 0, 0.2, 1), box-shadow 1200ms cubic-bezier(0, 0, 0.2, 1);
@@ -3930,8 +3930,8 @@ list row {
 
 row:selected {
   color: inherit;
-  background-image: url("assets/selected-line.png"), url("assets/selected-line@2.png");
-  transition: box-shadow 1200ms cubic-bezier(0, 0, 0.2, 1), background-image 1200ms cubic-bezier(0, 0, 0.2, 1);
+/*  background-image: url("assets/selected-line.png"), url("assets/selected-line@2.png");
+  transition: box-shadow 1200ms cubic-bezier(0, 0, 0.2, 1), background-image 1200ms cubic-bezier(0, 0, 0.2, 1); */
 }
 
 row:selected image,
@@ -8735,81 +8735,89 @@ window.background.csd.thunar scrolledwindow.frame.sidebar.shortcuts-pane treevie
 /******************
  ! Whisker Menu *
 *******************/
-/*set custom gtk3/css code below */
-/* Background is top bar except behind toolbuttons*/
-/* color is cursor, corner triangle, and user name*/
-window#whiskermenu-window {
+
+#whiskermenu-window {
   background-color: #424242;
-  	color: #ececee;
+  color: #ececee;
 }
 
-/* Set colour of whisker perimeter border to match background of menu*/
 #whiskermenu-window border {
-  background-color: #424242;
-  border-color: #2e63ba;
-  color: #f5f5f5;
+  border: solid 2px #2e63ba;
 }
 
-/* Make sidebar buttons match */
-/* Background is area behind category icons and tool bars*/
-/* color is category text*/
-#whiskermenu-window button {
+#whiskermenu-window .title-area {
   background-color: #424242;
   color: #ececee;
-  border-radius: 0px;
 }
-/* Background color is selection cursor upon mouseover*/
-#whiskermenu-window button:hover {
-  background-color: #A3B5D9;
-  color: #1d2324;
-}
-/* Background color is selection cursor upon clicking*/
-#whiskermenu-window button:checked {
-  background-color: #A3B5D9;
-  color: #1d2324;
-}
-
-
-/* Background is area where applications appear */
-/* color is the application text*/
-/* Make treeview match */
-
-#whiskermenu-window treeview {
-  background-color: #505050;
-  color:  #ececee;
-}
-
-/* Background is selection box color in tree view*/
-/* color is the selected application text*/
-/* this setting appears needed despite line 8281 settings */
-#whiskermenu-window treeview:hover {
-  background-color: #A3B5D9;
-  color: #1d2324;
-}
-
-#whiskermenu-window treeview:selected {
-  background-color: #2e63ba;
-  color: #ececee;
-}
-
-#whiskermenu-window treeview:active {
-  background-color: #2e63ba;
-  color: #ececee;
-}
-
 
 #whiskermenu-window entry.search {
-  border-radius: 0px;
-  border-color: #505050;
-  border-width: 1px;
+  background-color: #505050;
+  border: solid 2px #2e63ba;
 }
 
 #whiskermenu-window entry.search:focus {
   background-color: #505050;
-  color: #ececee;
-  border-color: #2e63ba;
-  border-width: 2px;
+  color: #ffffff;
+  border: solid 2px #2e63ba;
 }
+
+#whiskermenu-window .categories {
+  background-color: #424242;
+  color: #ececee;
+}
+
+#whiskermenu-window .category-button {
+  background-color: #424242;
+  color: #ececee;
+}
+
+#whiskermenu-window .category-button:focus {
+  background-color: #2e63ba;
+  color: #ffffff;
+}
+
+#whiskermenu-window .category-button:checked {
+  background-color: #2e63ba;
+  color: #ececee;
+}
+
+#whiskermenu-window .category-button:hover {
+  background-color: #a3b5d9;
+  color: #1d2324;
+}
+
+#whiskermenu-window .contents {
+  background-color: #505050;
+  color: #ececee;
+}
+
+#whiskermenu-window .launchers-pane {
+  background-color: #505050;
+  color: #ececee;
+}
+
+#whiskermenu-window .launchers {
+  background-color: #505050;
+  color: #ececee;
+  border: none;
+}
+
+
+#whiskermenu-window .launchers:unfocus {
+  background-color: #505050;
+  color: #ececee;
+}
+
+#whiskermenu-window .launchers:selected {
+  background-color: #2e63ba;
+  color: #ffffff;
+}
+
+#whiskermenu-window .launchers:hover {
+  background-color: #a3b5d9;
+  color: #1d2324;
+}
+
 
 /*TO HERE*/
 /* GTK NAMED COLORS
