ease-dark and xfwm4 fixes

--- a/mx-ease-Dark/gtk-3.0/gtk-dark.css
+++ b/mx-ease-Dark/gtk-3.0/gtk-dark.css
@@ -8803,7 +8803,7 @@ window.background.csd.thunar scrolledwindow.frame.sidebar.shortcuts-pane treevie
 }
 
 
-#whiskermenu-window .launchers:unfocus {
+#whiskermenu-window .launchers:disabled {
   background-color: #505050;
   color: #ececee;
 }
