--- a/mx-ease-Dark/gtk-3.0/extra-tweaks.css
+++ b/mx-ease-Dark/gtk-3.0/extra-tweaks.css
@@ -157,8 +157,10 @@ box box box grid button.toggle:disabled {
 
 /*seahorse*/
 
-viewport clamp list row { background-color: #505050; color: #cacdd0; box-shadow: none; }
-viewport clamp list row label { background-color: #505050; color: #cacdd0; }
+viewport clamp list { background-color: #505050; }
+
+viewport clamp list row { background-color: #323232; color: #cacdd0; box-shadow: none; }
+viewport clamp list row label { background-color: #323232; color: #cacdd0; }
 viewport clamp list row:hover { background-color: #a3b5d9; color: #424242; }
 viewport clamp list row:hover label { background-color: #a3b5d9; color: #424242; }
 viewport clamp list row:selected { background-color: #2e63ba; color: #ffffff; }
@@ -169,3 +171,9 @@ viewport list row:selected { background-color: #2e63ba; color: #ffffff; }
 viewport list row:selected label { background-color: #2e63ba; color: #ffffff; }
 viewport list row:hover { background-color: #a3b5d9; color: #424242; }
 viewport list row:selected:hover { background-color: #2e63ba; color: #ffffff; }
+
+/*libreoffice*/
+
+grid grid { background-color: transparent; }
+
+scrolledwindow .view:hover   { color: #424242; background-color: #a3b5d9; }
