--- a/mx-ease/gtk-4.0/gtk.css
+++ b/mx-ease/gtk-4.0/gtk.css
@@ -1677,8 +1677,8 @@ headerbar {
   padding: 0;
   box-shadow: inset 0 -1px rgba(0, 0, 0, 0.12), inset 0 1px rgba(255, 255, 255, 0.1);
   background-color: #1d2324;
-  /*HERE JULY*/
-    border-top: 3px solid #1d2324;
+  /*HERE JULY
+    border-top: 3px solid #1d2324;  */
 }
 
 headerbar:disabled {
@@ -1690,7 +1690,7 @@ headerbar:disabled {
 headerbar:backdrop {
   background-color: #424242;
   color: #cacdd0;
-  border-top: 3px solid #424242;
+ /* border-top: 3px solid #424242;*/
 }
 
 headerbar:backdrop:disabled {
@@ -6997,12 +6997,12 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 
 .sidebar-pane:dir(ltr), .sidebar-pane:dir(ltr) banner > revealer > widget, .sidebar-pane.end:dir(rtl), .sidebar-pane.end:dir(rtl) banner > revealer > widget {
   box-shadow: none;
-  border-right: 1px solid rgba(0, 0, 0, 0.08);
+ /* border-right: 1px solid rgba(0, 0, 0, 0.08); */
 }
 
 .sidebar-pane:dir(rtl), .sidebar-pane:dir(rtl) banner > revealer > widget, .sidebar-pane.end:dir(ltr), .sidebar-pane.end:dir(ltr) banner > revealer > widget {
   box-shadow: none;
-  border-left: 1px solid rgba(0, 0, 0, 0.08);
+ /* border-left: 1px solid rgba(0, 0, 0, 0.08); */
 }
 
 /* Middle pane in three-pane setups */
@@ -7161,7 +7161,7 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 .sidebar-pane .content-pane.end:dir(rtl),
 .sidebar-pane .content-pane.end:dir(rtl) banner > revealer > widget {
   box-shadow: none;
-  border-right: 1px solid rgba(0, 0, 0, 0.08);
+  /*border-right: 1px solid rgba(0, 0, 0, 0.08);*/
 }
 
 .content-pane .sidebar-pane:dir(rtl), .content-pane .sidebar-pane:dir(rtl) banner > revealer > widget, .content-pane .sidebar-pane.end:dir(ltr), .content-pane .sidebar-pane.end:dir(ltr) banner > revealer > widget,
@@ -7170,7 +7170,7 @@ toolbarview.undershoot-bottom scrolledwindow > undershoot.bottom {
 .sidebar-pane .content-pane.end:dir(ltr),
 .sidebar-pane .content-pane.end:dir(ltr) banner > revealer > widget {
   box-shadow: none;
-  border-left: 1px solid rgba(0, 0, 0, 0.08);
+ /* border-left: 1px solid rgba(0, 0, 0, 0.08);*/
 }
 
 .sidebar-pane .sidebar-pane {
@@ -7760,7 +7760,7 @@ background-color: #0f56d9;
 color: #ffffff;
 }
 
-##########
+/*##########*/
 
 paned box stack row:hover {
 background-color: #c3d5f6;
@@ -7782,3 +7782,8 @@ background-color: #0f56d9;
 color: #ffffff;
 }
 
+/*##########*/
+
+headerbar { border: solid 1px #1d2324; }
+headerbar:backdrop { border: solid 1px #1d2324; }
+.sidebar-pane headerbar { border: solid 1px #1d2324; }
