--- a/mx-ease-Dark/gtk-3.0/extra-tweaks.css
+++ b/mx-ease-Dark/gtk-3.0/extra-tweaks.css
@@ -116,8 +116,7 @@ scrolledwindow button { border: 1px solid transparent; }
 .standard-view .view:selected { color: #ffffff; background-color: #2e63ba; }
 
 box grid toolbar button { border: solid 1px transparent; }
-
-box box button { border: solid 1px transparent; }
+scrolledwindow viewport grid button { border: solid 1px transparent; }
 
 
 /*Claws Mail*/
